Added placeholders and dev script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Resource Server in hypervault",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --ext js,njk server.js --dev"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/lixiii/hypervault-resouceServer#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
