--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Resource Server in hypervault",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --ext js,njk server.js --dev"
+    "dev": "nodemon --ext js,njk server.js --dev",
+    "test": "mocha -t 0 --recursive --exit"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,11 @@
     "mkdirp": "^0.5.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
