--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/lixiii/hypervault-resouceServer#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "hasha": "^3.0.0",
     "mkdirp": "^0.5.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
