Added http Ping endpoint and test

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.16.4",
     "hasha": "^3.0.0",
     "mkdirp": "^0.5.1",
+    "multer": "^1.4.1",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   },
