--- a/composer-rest-server/Dockerfile
+++ b/composer-rest-server/Dockerfile
@@ -1,4 +1,3 @@
 FROM hyperledger/composer-rest-server
-RUN npm install --production loopback-connector-mongodb passport-google-oauth2 && \
-npm cache clean --force && \
+RUN npm cache clean --force && \
 ln -s node_modules .node_modules
