--- a/resourceserver.hypervault.tech.conf
+++ b/resourceserver.hypervault.tech.conf
@@ -16,6 +16,7 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        add_header Access-Control-Allow-Origin *;
     }
 }
 
@@ -31,5 +32,6 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        add_header Access-Control-Allow-Origin *;
     }
 }
