--- a/resourceserver.hypervault.tech.conf
+++ b/resourceserver.hypervault.tech.conf
@@ -16,6 +16,9 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+    }
+
+    location ~* \.(eot|ttf|woff|woff2)$ {
         add_header Access-Control-Allow-Origin *;
     }
 }
@@ -32,6 +35,8 @@ server {
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+    }
+    location ~* \.(eot|ttf|woff|woff2)$ {
         add_header Access-Control-Allow-Origin *;
     }
 }
