--- a/resourceserver.hypervault.tech.conf
+++ b/resourceserver.hypervault.tech.conf
@@ -10,16 +10,13 @@ server {
     ssl_session_cache shared:SSL:10m;
 
     location / {
+        add_header "Access-Control-Allow-Origin"  *;
         proxy_pass http://localhost:2019;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-    }
-
-    location ~* \.(eot|ttf|woff|woff2)$ {
-        add_header Access-Control-Allow-Origin *;
     }
 }
 
@@ -29,14 +26,12 @@ server {
     server_name resourceserver.hypervault.tech;
 
     location / {
+        add_header "Access-Control-Allow-Origin"  *;
         proxy_pass http://localhost:2019;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
-    }
-    location ~* \.(eot|ttf|woff|woff2)$ {
-        add_header Access-Control-Allow-Origin *;
     }
 }
