Updated host name

--- a/resourceserver2.hypervault.tech.conf
+++ b/resourceserver2.hypervault.tech.conf
@@ -1,9 +1,9 @@
-# This file should be copied to /etc/nginx/conf.d/resourceserver.hypervault.tech.conf to enable reverse proxy
+# This file should be copied to /etc/nginx/conf.d/resourceserver2.hypervault.tech.conf to enable reverse proxy
 # Also, in /etc/nginx/nginx.conf server_names_hash_bucket_size 64; should be enabled
 server {
     listen 443;
 
-    server_name resourceserver.hypervault.tech;
+    server_name resourceserver2.hypervault.tech;
     ssl on;
     ssl_certificate /home/ubuntu/credentials/cert.pem;
     ssl_certificate_key /home/ubuntu/credentials/key.pem;
@@ -23,7 +23,7 @@ server {
 server {
     listen 80;
 
-    server_name resourceserver.hypervault.tech;
+    server_name resourceserver2.hypervault.tech;
 
     location / {
         add_header "Access-Control-Allow-Origin"  *;
